[package]
name = "redis-cluster-tests"
version = "0.1.0"
authors = ["rogerio.ferreira@ibm.com <Rogerio Ferreira>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.20.0", features = [ "cluster"] }
r2d2_redis_cluster = "0.1.6"
